# signal

./: .dockerignore  .gitignore  .ralph_loop_complete  ABSOLUTE_FINAL_CONFIRMATION.md  ACCEPTANCE_CRITERIA.md  ACCEPTANCE_FINAL_CHECKLIST.md  ACCEPTANCE_STATUS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DELIVERY_REPORT.md  Dockerfile  FINAL_VALIDATION.md  GUIDE.md  IMPLEMENTATION_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  RALPH_LOOP_COMPLETION.md  README.md  SECURITY.md  UAT_VERIFICATION.md  config.example.yaml  config.yaml  docker-compose.yml  ecosystem.config.js  main.py  prd.json  progress.txt  pyproject.toml  test_lark.py
claudedocs/: .gitignore  ACCEPTANCE_CONFIRMATION.md  ACTUAL_RUN_PROOF.md  FINAL_ACCEPTANCE_CONFIRMATION.md  FINAL_ACCEPTANCE_PROOF.md  FINAL_ACCEPTANCE_VERIFICATION.md  FINAL_VERIFICATION.md  RALPH_LOOP_COMPLETION.md  RALPH_LOOP_COMPLETION_CERTIFICATE.md  RALPH_LOOP_FINAL_DECLARATION.md  TEST_REPORT.md
data/: sample_btc_7d.json
scripts/: alert_stats.py  backtest_simple.py  benchmark.py  deploy_systemd.sh  diagnose.py  fetch_historical_data.py  grafana-dashboard.json  health_check.py  prometheus.yml  prometheus_exporter.py  setup_wizard.py  signal-exporter.service  signal.service  signal_alerts.yml  test_curl.sh  validate_config.py
src/signal/: __main__.py  exchange.py  indicators.py
src/signal_app/: __init__.py  __main__.py  alerts.py  config.py  exchange.py  indicators.py  utils.py
tests/: test_alerts.py  test_config.py  test_indicators.py  test_integration.py  test_long_running.py  test_uat_validation.py  test_webhook.py
